Fixed to accomodate TRIAPremium.

--- a/InsuranceTech/Pages/Insured/Delete.cshtml
+++ b/InsuranceTech/Pages/Insured/Delete.cshtml
@@ -84,6 +84,12 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Insurance.Premium)
         </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Insurance.TRIAPremium)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Insurance.TRIAPremium)
+        </dd>
     </dl>
     
     <form method="post">
