--- a/InsuranceTech/Pages/Insured/Details.cshtml
+++ b/InsuranceTech/Pages/Insured/Details.cshtml
@@ -83,6 +83,12 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Insurance.Premium)
         </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Insurance.TRIAPremium)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Insurance.TRIAPremium)
+        </dd>
     </dl>
 </div>
 <div>
