--- a/InsuranceTech/Pages/Insured/Edit.cshtml
+++ b/InsuranceTech/Pages/Insured/Edit.cshtml
@@ -75,6 +75,11 @@
                 <span asp-validation-for="Insurance.Premium" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Insurance.TRIAPremium" class="control-label"></label>
+                <input asp-for="Insurance.TRIAPremium" class="form-control" />
+                <span asp-validation-for="Insurance.TRIAPremium" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
