Added required validation for zip code and renamed index to report.

--- a/InsuranceTech/Pages/Insured/Index.cshtml
+++ b/InsuranceTech/Pages/Insured/Index.cshtml
@@ -2,7 +2,7 @@
 @model InsuranceTech.Pages.Insured.IndexModel
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Report";
 }
 
 <h1>Index</h1>
